--- a/src/main/resources/public/back_end_login.html
+++ b/src/main/resources/public/back_end_login.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="/back_end-v2/assets/img/favicon.png" rel="icon" />
-    <link href="/back_end-v2/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect" />
@@ -21,21 +21,21 @@
 
     <!-- Vendor CSS Files -->
     <link
-      href="/back_end-v2/assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="/back_end-v2/assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link href="/back_end-v2/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link href="/back_end-v2/assets/vendor/quill/quill.snow.css" rel="stylesheet" />
-    <link href="/back_end-v2/assets/vendor/quill/quill.bubble.css" rel="stylesheet" />
-    <link href="/back_end-v2/assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
-    <link href="/back_end-v2/assets/vendor/simple-datatables/style.css" rel="stylesheet" />
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet" />
+    <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet" />
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="/back_end-v2/assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
 
     <!-- =======================================================
   * Template Name: NiceAdmin - v2.5.0
@@ -58,10 +58,10 @@
               >
                 <div class="d-flex justify-content-center py-4">
                   <a
-                    href="/back_end-v2/index.html"
+                    href="back_end_index.html"
                     class="logo d-flex align-items-center w-auto"
                   >
-                    <img src="/back_end-v2/assets/img/logo.png" alt="" />
+                    <img src="assets/img/logo.png" alt="" />
                     <span class="d-none d-lg-block"
                       >iRelax Hotel</span
                     >
@@ -166,16 +166,16 @@
     ></a>
 
     <!-- Vendor JS Files -->
-    <script src="/back_end-v2/assets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/chart.js/chart.umd.js"></script>
-    <script src="/back_end-v2/assets/vendor/echarts/echarts.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/quill/quill.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/simple-datatables/simple-datatables.js"></script>
-    <script src="/back_end-v2/assets/vendor/tinymce/tinymce.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/chart.js/chart.umd.js"></script>
+    <script src="assets/vendor/echarts/echarts.min.js"></script>
+    <script src="assets/vendor/quill/quill.min.js"></script>
+    <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="/back_end-v2/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
