--- a/src/main/resources/public/back_end_employee_permissions.html
+++ b/src/main/resources/public/back_end_employee_permissions.html
@@ -7,73 +7,55 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>iRelaxHotel 後台管理系統 - 員工管理</title>
+    <title>iRelaxHotel 後台管理系統 - 員工管理 - 員工權限管理</title>
     <meta name="robots" content="noindex, nofollow" />
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-    <link href="/back_end-v2/assets/img/favicon.png" rel="icon" />
-    <link
-      href="/back_end-v2/assets/img/apple-touch-icon.png"
-      rel="apple-touch-icon"
-    />
+    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
     <link href="https://fonts.gstatic.com" rel="preconnect" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
     <link
-      href="/back_end-v2/assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="/back_end-v2/assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link
-      href="/back_end-v2/assets/vendor/boxicons/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="/back_end-v2/assets/vendor/quill/quill.snow.css"
-      rel="stylesheet"
-    />
-    <link
-      href="/back_end-v2/assets/vendor/quill/quill.bubble.css"
-      rel="stylesheet"
-    />
-    <link
-      href="/back_end-v2/assets/vendor/remixicon/remixicon.css"
-      rel="stylesheet"
-    />
-    <link
-      href="/back_end-v2/assets/vendor/simple-datatables/style.css"
-      rel="stylesheet"
-    />
-    <link href="/back_end-v2/assets/css/style.css" rel="stylesheet" />
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet" />
+    <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet" />
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <style shopback-extension-v7-2-1="" data-styled-version="4.2.0"></style>
 
     <!-- 靜態html導入：先加入jquery再script 靜態網頁 -->
     <!-- javascripts -->
-    <script src="/back_end-v2/assets/js/jquery.js"></script>
-    <script src="/back_end-v2/assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- 頂端欄 -->
     <script type="text/javascript">
-      $.get("/back_end-v2//header.html", function (data) {
+      $.get("back_end_header.html", function (data) {
         $("#header").html(data);
       });
     </script>
 
     <!-- 側邊欄 -->
     <script type="text/javascript">
-      $.get("/back_end-v2//aside.html", function (data) {
+      $.get("back_end_aside.html", function (data) {
         $("#aside").html(data);
       });
     </script>
 
     <!-- 底欄 -->
     <script type="text/javascript">
-      $.get("/back_end-v2//footer.html", function (data) {
+      $.get("back_end_footer.html", function (data) {
         $("#footer").html(data);
       });
     </script>
@@ -87,12 +69,12 @@
     <!-- End Sidebar-->
     <main id="main" class="main">
       <div class="pagetitle">
-        <h1>員工管理</h1>
+        <h1>員工總覽</h1>
         <nav>
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item">員工管理</li>
-            <!-- <li class="breadcrumb-item active">Data</li> -->
+            <li class="breadcrumb-item active">員工總覽</li>
           </ol>
         </nav>
       </div>
@@ -221,15 +203,15 @@
       class="back-to-top d-flex align-items-center justify-content-center"
       ><i class="bi bi-arrow-up-short"></i
     ></a>
-    <script src="/back_end-v2/assets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/chart.js/chart.umd.js"></script>
-    <script src="/back_end-v2/assets/vendor/echarts/echarts.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/quill/quill.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/simple-datatables/simple-datatables.js"></script>
-    <script src="/back_end-v2/assets/vendor/tinymce/tinymce.min.js"></script>
-    <script src="/back_end-v2/assets/vendor/php-email-form/validate.js"></script>
-    <script src="/back_end-v2/assets/js/main.js"></script>
+    <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/chart.js/chart.umd.js"></script>
+    <script src="assets/vendor/echarts/echarts.min.js"></script>
+    <script src="assets/vendor/quill/quill.min.js"></script>
+    <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/js/main.js"></script>
     <script
       async=""
       src="https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP"
