--- a/src/main/resources/public/back_end_error-404.html
+++ b/src/main/resources/public/back_end_error-404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>iRelaxHotel 後台管理系統</title>
+    <title>Pages / Not Found 404 - NiceAdmin Bootstrap Template</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -37,58 +37,39 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
 
-    <!-- 靜態html導入：先加入jquery再script 靜態網頁 -->
-    <!-- javascripts -->
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-
-    <!-- 頂端欄 -->
-    <script type="text/javascript">
-      $.get("header.html", function (data) {
-        $("#header").html(data);
-      });
-    </script>
-
-    <!-- 側邊欄 -->
-    <script type="text/javascript">
-      $.get("aside.html", function (data) {
-        $("#aside").html(data);
-      });
-    </script>
-
-    <!-- 底欄 -->
-    <script type="text/javascript">
-      $.get("footer.html", function (data) {
-        $("#footer").html(data);
-      });
-    </script>
+    <!-- =======================================================
+  * Template Name: NiceAdmin - v2.5.0
+  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
   </head>
-  <!-- ======= Header ======= -->
-  <div id="header"></div>
-  <!-- End Header -->
+
   <body>
-    <!-- ======= Sidebar ======= -->
-    <div id="aside"></div>
-    <!-- End Sidebar-->
-    <main id="main" class="main">
-      <div class="pagetitle">
-        <h1>首頁</h1>
-        <nav>
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-              <a href="index.html">後台管理系統</a>
-            </li>
-            <li class="breadcrumb-item active">首頁</li>
-          </ol>
-        </nav>
+    <main>
+      <div class="container">
+        <section
+          class="section error-404 min-vh-100 d-flex flex-column align-items-center justify-content-center"
+        >
+          <h1>404</h1>
+          <h2>The page you are looking for doesn't exist.</h2>
+          <a class="btn" href="back_end_index.html">Back to home</a>
+          <img
+            src="assets/img/not-found.svg"
+            class="img-fluid py-5"
+            alt="Page Not Found"
+          />
+          <div class="credits">
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
+            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          </div>
+        </section>
       </div>
-      <!-- End Page Title -->
     </main>
     <!-- End #main -->
-
-    <!-- ======= Footer ======= -->
-    <footer id="footer" class="footer"></footer>
-    <!-- End Footer -->
 
     <a
       href="#"
