--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,8 +18,7 @@
 <body id="top">
 
   <!-- Top Background Image Wrapper -->
-  <div class="bgded overlay padtop" style="background-image:url('images/demo/backgrounds/01.png');">
-    <!-- ################################################################################################ -->
+  <div class="bgded overlay padtop" style="background-image:url('images/backgrounds/01.png');">
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
 
@@ -31,15 +30,12 @@
 
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left">
-        <!-- ################################################################################################ -->
         <a href="index.html">
           <div style="width: 220px; height: 70px;">
-            <img src="images/demo/logo/logo2.png">
+            <img src="images/logo/logo2.png">
           </div>
         </a>
         <!-- <h1><a href="index.html" style="display:inline-block;">iRelax Hotel</a></h1> -->
-
-        <!-- ################################################################################################ -->
       </div>
 
       <nav id="mainav" class="fl_right">
@@ -56,12 +52,10 @@
               <li><a href="pages/font-icons.html">Font Icons</a></li>
             </ul> -->
             <ul>
-              <li><a href="pages/gallery.html">簡介</a></li>
-              <li><a href="pages/full-width.html">Full Width</a></li>
-              <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
-              <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
-              <li><a href="pages/basic-grid.html">Basic Grid</a></li>
-              <li><a href="pages/font-icons.html">Font Icons</a></li>
+              <li><a href="pages/intro.html">簡介</a></li>
+              <li><a href="pages/traffic.html">交通資訊</a></li>
+              <li><a href="pages/notic.html">注意事項</a></li>
+              
             </ul>
           </li>
 
@@ -77,7 +71,7 @@
         <li><a href="#">瀏覽房型</a></li>
 
 
-        <li><a href="#">活動設施</a></li>
+        <li><a href="pages/contactUS.html">活動設施</a></li>
         <ul>
         </ul>
         <li><a class="drop" href="#">當地探索</a>
@@ -89,7 +83,7 @@
         </li>
         </li>
 
-        <li><a href="#">聯絡我們</a></li>
+        <li><a href="pages/contactUS.html">聯絡我們</a></li>
 
         </ul>
         <!-- ################################################################################################ -->
@@ -157,7 +151,7 @@
         <ul id="latest" class="nospace group sd-third">
           <li class="one_third first">
             <article>
-              <figure><a class="imgover" href="#"><img src="images/demo/348x261.png" alt=""></a>
+              <figure><a class="imgover" href="#"><img src="images/348x261.png" alt=""></a>
                 <figcaption>
                   <ul class="nospace meta clear">
                     <li><i class="fas fa-user"></i> <a href="#">Admin</a></li>
@@ -173,7 +167,7 @@
           </li>
           <li class="one_third">
             <article>
-              <figure><a class="imgover" href="#"><img src="images/demo/348x261.png" alt=""></a>
+              <figure><a class="imgover" href="#"><img src="images/348x261.png" alt=""></a>
                 <figcaption>
                   <ul class="nospace meta clear">
                     <li><i class="fas fa-user"></i> <a href="#">Admin</a></li>
@@ -189,7 +183,7 @@
           </li>
           <li class="one_third">
             <article>
-              <figure><a class="imgover" href="#"><img src="images/demo/348x261.png" alt=""></a>
+              <figure><a class="imgover" href="#"><img src="images/348x261.png" alt=""></a>
                 <figcaption>
                   <ul class="nospace meta clear">
                     <li><i class="fas fa-user"></i> <a href="#">Admin</a></li>
@@ -213,21 +207,21 @@
           <li class="one_third">
             <article><a href="#"><i class="fas fa-dolly-flatbed"></i></a>
               <h6 class="heading">景觀雙人房</h6>
-              <img src="images/demo/room/景觀雙人房.jpg" alt="logo" width="202" height="42" title="logo">
+              <img src="images/room/景觀雙人房.jpg" alt="logo" width="202" height="42" title="logo">
               <footer><a href="#">More Details &raquo;</a></footer>
             </article>
           </li>
           <li class="one_third">
             <article><a href="#"><i class="fas fa-dolly-flatbed"></i></a>
               <h6 class="heading">豪華雙人房</h6>
-              <img src="images/demo/room/豪華雙人房.jpg" alt="logo" width="202" height="42" title="logo">
+              <img src="images/room/豪華雙人房.jpg" alt="logo" width="202" height="42" title="logo">
               <footer><a href="#">More Details &raquo;</a></footer>
             </article>
           </li>
           <li class="one_third">
             <article><a href="#"><i class="fas fa-dolly-flatbed"></i></a>
               <h6 class="heading">尊榮雙人房</h6>
-              <img src="images/demo/room/尊榮雙人房.jpg" alt="logo" width="202" height="42" title="logo">
+              <img src="images/room/尊榮雙人房.jpg" alt="logo" width="202" height="42" title="logo">
               <footer><a href="#">More Details &raquo;</a></footer>
             </article>
           </li>
@@ -241,7 +235,7 @@
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
-  <div id="aboutUs" class="bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');">
+  <div id="aboutUs" class="bgded overlay" style="background-image:url('images/backgrounds/01.png');">
     <section class="hoc container clear">
       <!-- ################################################################################################ -->
       <div class="sectiontitle">
@@ -260,9 +254,8 @@
             探訪螢火蟲、聆聽鳥叫蛙鳴、觀星、遠眺馬拉邦山，四季晨昏變化分明。
             靜謐山水芬多精中，讓1569m美人湯溫泉滑潤肌膚，使您徹底放鬆心曠神怡！</p>
 
-          <ul class="nospace inline pushright">
-            <li><a class="btn" href="#">立即訂房</a></li>
-            <li><a class="btn inverse" href="#">加入會員</a></li>
+          <ul class="nospace pushright">
+            <li><a class="btn" href="#">了解更多</a></li>
           </ul>
           <!-- <ul class="nospace group">
             <li><span>1</span> Nulla bibendum in erat</li>
@@ -275,7 +268,7 @@
             <li><span>8</span> Velit mi facilisis eget</li>
           </ul> -->
         </div>
-        <div class="one_third last"><a class="imgover" href="#"><img src="images/demo/348x394.png" alt=""></a></div>
+        <div class="one_third last"><a class="imgover" href="#"><img src="images/348x394.png" alt=""></a></div>
       </article>
       <!-- ################################################################################################ -->
     </section>
@@ -288,15 +281,22 @@
       <!-- ################################################################################################ -->
       <a href="index.html">
         <div style="width: 220px; height: 70px;">
-          <img src="images/demo/logo/logo2.png">
+          <img src="images/logo/logo2.png">
         </div>
       </a>
       <br>
       <div class="two_third first">
-        <h6 class="heading">Love To Relax</h6>
-        <p>訂房專線(1) / 037-996-796 訂房專線(2) / 037-996-795 傳真專線 / 037-994-549 <br>
-          地址 / 苗栗縣大湖鄉義和村淋漓坪126號 客服信箱 / lakesidemystery@gmail.com
-        </p>
+        <li> 
+          訂房專線 /  
+              <a href="tel:+886-4-23265860">2326-5860</a> 
+        </li>
+        <p> 地址 / 台中市南屯區公益路二段51號18樓</p>
+        <li> 
+          客服信箱 /  
+              <a href="lakesidemystery@gmail.com ">lakesidemystery@gmail.com </a> 
+        </li>
+        <br><br>
+
         <ul class="faico clear">
           <li><a class="faicon-facebook" href="#"><i class="fab fa-facebook"></i></a></li>
           <li><a class="faicon-google-plus" href="#"><i class="fab fa-google-plus-g"></i></a></li>
