--- a/src/main/resources/public/back_end-v6/pages/employee/employee_add.html
+++ b/src/main/resources/public/back_end-v6/pages/employee/employee_add.html
@@ -114,6 +114,52 @@
                         <input id="confirm_password" class="form-control" name="confirm_password" type="password" value=""
                         placeholder="再次輸入密碼">
                     </div>
+                                        <div class="form-group">
+                      <label>管理權限</label>
+                      <br/>
+                      <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" id="permission" value="7">
+                          全部(管理者)
+                        </label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" id="permission" value="1">
+                          會員管理
+                        </label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" id="permission" value="">
+                          員工管理
+                        </label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" id="permission" value="">
+                          訂單管理
+                        </label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" id="permission" value="">
+                          房型管理
+                        </label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" id="permission" value="">
+                          房務管理
+                        </label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" id="permission" value="">
+                          客服管理
+                        </label>
+                      </div>
+                    </div>
 
                     <input type="hidden" name="action" value="insert"> <input
                     type="submit" class="btn btn-primary" value="送出新增">
