--- a/src/main/resources/public/back_end-v6/pages/hotelnews/news_add.html
+++ b/src/main/resources/public/back_end-v6/pages/hotelnews/news_add.html
@@ -44,6 +44,33 @@
       });
     </script>
 
+<script>
+// var apiurl={
+// 	    registerdata:"/news",
+// 	    successregister:"/news_list.html"
+// 	}
+// 	$("#insert").click(function (){
+// 	    var newsType = $("#newsType").val();
+// 	    var title = $("#title").val();
+// 	    var startDate = $("#startDate").val();
+// 	    var endDate = $("#endDate").val();
+// 	    var pic = $("#pic").val();
+// 	    var content = $("#content").val();
+
+
+// 	    $.post({
+// 	        url:apiurl.registerdata,
+// 	        contentType:"application/json;charset=UTF-8",
+// 	        data:JSON.stringify({"name":name,"account":account,"password":password}),
+// 	    });
+// 	});
+// 	        success:function(res) {
+// 	            window.location.href = apiurl.successregister;//正確登入後頁面跳轉
+// 	        }
+
+</script>
+
+
   </head>
   <body class="sidebar-dark">
     <div class="main-wrapper">
@@ -98,18 +125,18 @@
                       </div>
                       <div class="form-group">
                         <label>開始日期</label>
-                        <input type="date" class="form-control" id="start_date" value="">
+                        <input type="date" class="form-control" id="startDate" value="">
                       </div>
                       <div class="form-group">
                         <label>結束日期</label>
-                        <input type="date" class="form-control" id="end_date" value="">
+                        <input type="date" class="form-control" id="endDate" value="">
                       </div>
                
                       <div class="form-group">
                         <label>圖片</label>
                         <input id="pic" type="file" name="img[]" class="file-upload-default">
                         <div class="input-group col-xs-12">
-                            <input type="text" class="form-control file-upload-info" disabled="" placeholder="上傳圖片">
+                            <input type="text" class="form-control file-upload-info" placeholder="上傳圖片">
                             <span class="input-group-append">
                                 <button class="file-upload-browse btn btn-primary" type="button">上傳圖片</button>
                             </span>
@@ -121,7 +148,7 @@
                     </div>
          
 
-                    <input type="hidden" name="action" value="insert"> <input
+                    <input type="hidden" name="action" value="insert" id="insert"> <input
                     type="submit" class="btn btn-primary" value="送出新增">
                     <input type="reset" class="btn btn-light" value="重新填寫">
                   </form>
@@ -131,6 +158,7 @@
           </div>
       </div>
     </div>
+     </div>
 
     <!-- core:js -->
     <script src="../../../assets/vendors/core/core.js"></script>
