--- a/src/main/resources/public/back_end-v6/pages/member/member_list.html
+++ b/src/main/resources/public/back_end-v6/pages/member/member_list.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>iRelax 後台管理系統 - 會員管理</title>
+    <!-- core:css -->
+    <link rel="stylesheet" href="../../../assets/vendors/core/core.css" />
+    <!-- endinject -->
+    <!-- plugin css for this page -->
+    <link
+      rel="stylesheet"
+      href="../../../assets/vendors/datatables.net-bs4/dataTables.bootstrap4.css"
+    />
+    <!-- end plugin css for this page -->
+    <!-- inject:css -->
+    <link
+      rel="stylesheet"
+      href="../../../assets/fonts/feather-font/css/iconfont.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../../assets/vendors/flag-icon-css/css/flag-icon.min.css"
+    />
+    <!-- endinject -->
+    <!-- Layout styles -->
+    <link rel="stylesheet" href="../../../assets/css/demo_1/style.css" />
+    <!-- End layout styles -->
+    <link rel="shortcut icon" href="../../../assets/images/favicon.png" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>iRelax 後台管理系統 - 會員管理</title>
-  <!-- core:css -->
-  <link rel="stylesheet" href="../../../assets/vendors/core/core.css" />
-  <!-- endinject -->
-  <!-- plugin css for this page -->
-  <link rel="stylesheet" href="../../../assets/vendors/datatables.net-bs4/dataTables.bootstrap4.css" />
-  <!-- end plugin css for this page -->
-  <!-- inject:css -->
-  <link rel="stylesheet" href="../../../assets/fonts/feather-font/css/iconfont.css" />
-  <link rel="stylesheet" href="../../../assets/vendors/flag-icon-css/css/flag-icon.min.css" />
-  <!-- endinject -->
-  <!-- Layout styles -->
-  <link rel="stylesheet" href="../../../assets/css/demo_1/style.css" />
-  <!-- End layout styles -->
-  <link rel="shortcut icon" href="../../../assets/images/favicon.png" />
+    <!-- 靜態html導入：先加入jquery再script 靜態網頁 -->
+    <!-- javascripts -->
+    <script src="../../../assets/js/jquery.js"></script>
+    <script src="../../../assets/js/bootstrap.min.js"></script>
 
-  <!-- 靜態html導入：先加入jquery再script 靜態網頁 -->
-  <!-- javascripts -->
-  <script src="../../../assets/js/jquery.js"></script>
-  <script src="../../../assets/js/bootstrap.min.js"></script>
+    <!-- 頂端欄 -->
+    <script type="text/javascript">
+      $.get("../../partials/_navbar.html", function (data) {
+        $("#navbar").html(data);
+      });
+    </script>
 
-  <!-- 頂端欄 -->
-  <script type="text/javascript">
-    $.get("../../partials/_navbar.html", function (data) {
-      $("#navbar").html(data);
-    });
-  </script>
+    <!-- 側邊欄 -->
+    <script type="text/javascript">
+      $.get("../../partials/_sidebar.html", function (data) {
+        $("#sidebar").html(data);
+      });
+    </script>
 
-  <!-- 側邊欄 -->
-  <script type="text/javascript">
-    $.get("../../partials/_sidebar.html", function (data) {
-      $("#sidebar").html(data);
-    });
-  </script>
-
-  <script>
-    function loadMembers() {
-      $.ajax({
-      url: "/member/",
-      method: "GET"
-    })
-      .done(function (msg) {
-        console.log(msg);
-        msg.forEach(element => {
-          console.log(element);
-          $('#members').append(`
+    <!-- 取得後端資料 -->
+    <script>
+      function loadMembers() {
+        $.ajax({
+          url: "/member/",
+          method: "GET",
+        }).done(function (msg) {
+          console.log(msg);
+          msg.forEach((element) => {
+            console.log(element);
+            $("#members").append(`
                 <tr>
                   <td>${element.id}</td>
                   <td>${element.account}</td>
@@ -61,65 +69,65 @@
                     <button name="${element.id}" class="btn btn-secondary deleteBtn">刪除</button>
                 </td>
               </tr>
-              `)
+              `);
+          });
         });
-      });
-    }
-    
-    loadMembers();
-  </script>
-</head>
+      }
 
-<body class="sidebar-dark">
-  <div class="main-wrapper">
-    <!--左側導航-->
-    <!-- partial:../../partials/_sidebar.html -->
-    <div id="sidebar"></div>
-    <!--End 左側導航-->
+      loadMembers();
+    </script>
+  </head>
 
-    <div class="page-wrapper">
-      <!-- ======= Header ======= -->
-      <!-- partial:../../partials/_navbar.html -->
-      <div id="navbar"></div>
-      <!-- End Header -->
+  <body class="sidebar-dark">
+    <div class="main-wrapper">
+      <!--左側導航-->
+      <!-- partial:../../partials/_sidebar.html -->
+      <div id="sidebar"></div>
+      <!--End 左側導航-->
 
-      <!-- 麵包屑 -->
-      <div class="page-content">
-        <nav class="page-breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-              <a href="../../index.html">首頁</a>
-            </li>
-            <li class="breadcrumb-item active" aria-current="page">
-              會員管理
-            </li>
-            <li class="breadcrumb-item active" aria-current="page">
-              會員總覽
-            </li>
-          </ol>
-        </nav>
+      <div class="page-wrapper">
+        <!-- ======= Header ======= -->
+        <!-- partial:../../partials/_navbar.html -->
+        <div id="navbar"></div>
+        <!-- End Header -->
 
-        <div class="row">
-          <div class="col-md-12 grid-margin stretch-card">
-            <div class="card">
-              <div class="card-body">
-                <h6 class="card-title">會員總覽</h6>
-                <p class="card-description"></p>
-                <div class="table-responsive">
-                  <table id="" class="table" style="text-align: center">
-                    <thead>
-                      <tr>
-                        <th style="width: 5%">編號</th>
-                        <th style="width: 10%">帳號</th>
-                        <th style="width: 15%">姓名</th>
-                        <th style="width: 15%">電話</th>
-                        <th style="width: 25%">信箱</th>
-                        <th style="width: 30%">操作</th>
-                      </tr>
-                    </thead>
-                    <tbody id="members">
-                    </tbody>
-                  </table>
+        <!-- 麵包屑 -->
+        <div class="page-content">
+          <nav class="page-breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="../../index.html">首頁</a>
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                會員管理
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                會員總覽
+              </li>
+            </ol>
+          </nav>
+
+          <div class="row">
+            <div class="col-md-12 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <h6 class="card-title">會員總覽</h6>
+                  <p class="card-description"></p>
+                  <div class="table-responsive">
+                    <table id="" class="table" style="text-align: center">
+                      <thead>
+                        <tr>
+                          <th style="width: 5%">編號</th>
+                          <th style="width: 10%">帳號</th>
+                          <th style="width: 15%">姓名</th>
+                          <th style="width: 15%">電話</th>
+                          <th style="width: 25%">信箱</th>
+                          <th style="width: 30%">操作</th>
+                        </tr>
+                      </thead>
+                      <tbody id="members"></tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
@@ -127,87 +135,83 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- core:js -->
-  <script src="../../../assets/vendors/core/core.js"></script>
-  <!-- endinject -->
-  <!-- plugin js for this page -->
-  <script src="../../../assets/vendors/datatables.net/jquery.dataTables.js"></script>
-  <script src="../../../assets/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
-  <!-- end plugin js for this page -->
-  <!-- inject:js -->
-  <script src="../../../assets/vendors/feather-icons/feather.min.js"></script>
-  <script src="../../../assets/js/template.js"></script>
-  <!-- endinject -->
-  <!-- custom js for this page -->
-  <!-- <script src="../../../assets/js/data-table.js"></script> -->
-  <script>
+    <!-- core:js -->
+    <script src="../../../assets/vendors/core/core.js"></script>
+    <!-- endinject -->
+    <!-- plugin js for this page -->
+    <script src="../../../assets/vendors/datatables.net/jquery.dataTables.js"></script>
+    <script src="../../../assets/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+    <!-- end plugin js for this page -->
+    <!-- inject:js -->
+    <script src="../../../assets/vendors/feather-icons/feather.min.js"></script>
+    <script src="../../../assets/js/template.js"></script>
+    <!-- endinject -->
+    <!-- custom js for this page -->
+    <!-- <script src="../../../assets/js/data-table.js"></script> -->
+    <script>
+      $("#members").on("click", ".deleteBtn", function () {
+        console.log("apple", this.name);
+        $.ajax({
+          url: "/member/" + this.name,
+          type: "DELETE",
+        })
+          .done(function () {
+            $("#members").children().remove();
+            console.log("123");
+          })
+          .done(function () {
+            loadMembers();
+          });
+      });
 
-    $('#members').on('click','.deleteBtn',function () {
-      console.log('apple' ,this.name);
-      $.ajax({
-        url:"/member/"+this.name,
-        type:"DELETE"
-      })
-      .done(function () {
-        $('#members').children().remove();
-        console.log('123');
-      })
-      .done(function () {
-        loadMembers();
-      })
-    })
-
-
-    // $('.deleteBtn').click(function () {
-    //   console.log('apple' ,this.name);
-    //   $.ajax({
-    //     url:"/member/"+this.name,
-    //     type:"DELETE"
-    //   })
-    //   .done(function () {
-    //     $('#members').children().remove();
-    //     console.log('123');
-    //   })
-    //   .done(function () {
-    //     loadMembers()
-    //   })
-    // })
-
-
-    $(function () {
-      "use strict";
+      // $('.deleteBtn').click(function () {
+      //   console.log('apple' ,this.name);
+      //   $.ajax({
+      //     url:"/member/"+this.name,
+      //     type:"DELETE"
+      //   })
+      //   .done(function () {
+      //     $('#members').children().remove();
+      //     console.log('123');
+      //   })
+      //   .done(function () {
+      //     loadMembers()
+      //   })
+      // })
 
       $(function () {
-        $("#dataTableExample").DataTable({
-          aLengthMenu: [
-            [10, 30, 50, -1],
-            [10, 30, 50, "All"],
-          ],
-          iDisplayLength: 10,
-          language: {
-            search: "",
-          },
-        });
-        $("#dataTableExample").each(function () {
-          var datatable = $(this);
-          // SEARCH - Add the placeholder for Search and Turn this into in-line form control
-          var search_input = datatable
-            .closest(".dataTables_wrapper")
-            .find("div[id$=_filter] input");
-          search_input.attr("placeholder", "查詢");
-          search_input.removeClass("form-control-sm");
-          // LENGTH - Inline-Form control
-          var length_sel = datatable
-            .closest(".dataTables_wrapper")
-            .find("div[id$=_length] select");
-          length_sel.removeClass("form-control-sm");
+        "use strict";
+
+        $(function () {
+          $("#dataTableExample").DataTable({
+            aLengthMenu: [
+              [10, 30, 50, -1],
+              [10, 30, 50, "All"],
+            ],
+            iDisplayLength: 10,
+            language: {
+              search: "",
+            },
+          });
+          $("#dataTableExample").each(function () {
+            var datatable = $(this);
+            // SEARCH - Add the placeholder for Search and Turn this into in-line form control
+            var search_input = datatable
+              .closest(".dataTables_wrapper")
+              .find("div[id$=_filter] input");
+            search_input.attr("placeholder", "查詢");
+            search_input.removeClass("form-control-sm");
+            // LENGTH - Inline-Form control
+            var length_sel = datatable
+              .closest(".dataTables_wrapper")
+              .find("div[id$=_length] select");
+            length_sel.removeClass("form-control-sm");
+          });
         });
       });
-    });
-  </script>
-  <!-- end custom js for this page -->
-</body>
-
+      //
+    </script>
+    <!-- end custom js for this page -->
+  </body>
 </html>
