--- a/src/main/resources/public/back_end-v6/pages/roomtype/roomtype_list.html
+++ b/src/main/resources/public/back_end-v6/pages/roomtype/roomtype_list.html
@@ -47,6 +47,36 @@
         $("#sidebar").html(data);
       });
     </script>
+
+    <!-- 取得後端資料 -->
+    <script>
+      function loadRoomtypes() {
+        $.ajax({
+          url: "/roomtype/",
+          method: "GET",
+        }).done(function (msg) {
+          console.log(msg);
+          msg.forEach((element) => {
+            console.log(element);
+            $("#roomtypes").append(`
+                <tr>
+                  <td>${element.id}</td>
+                  <td>${element.roomType}</td>
+                  <td>${element.roomPrice}</td>
+                  <td>${element.roomPerson}</td>
+                  <td>${element.roomPic}</td>
+                  <td>
+                 	 <button name="${element.id}" class="btn btn-success editBtn">修改</button>
+                    <button name="${element.id}" class="btn btn-secondary deleteBtn">刪除</button>
+                </td>
+              </tr>
+              `);
+          });
+        });
+      }
+
+      loadRoomtypes();
+    </script>
   </head>
   <body class="sidebar-dark">
     <div class="main-wrapper">
@@ -92,46 +122,46 @@
                           <th style="width: 20%">操作</th>
                         </tr>
                       </thead>
-                      <tbody>
-                        <tr>
-                          <td>1</td>
-                          <td>System Architect</td>
-                          <td>Edinburgh</td>
-                          <td>Edinburgh</td>
-                          <td>
-                            <img
-                              src=""
-                              alt=""
-                              style="width: 200px; height: 90px"
-                            />
-                          </td>
-                          <td>
-                            <form method="post" action="">
-                              <!-- 修改 -->
-                              <input
-                                class="btn btn-success"
-                                type="submit"
-                                value="修改"
-                                style="margin-right: 20px"
-                              />
-                              <input type="hidden" name="id" value="" />
-                              <input type="hidden" name="action" value="" />
+                      <tbody id="roomtypes">
+                        <!--                         <tr> -->
+                        <!--                           <td>1</td> -->
+                        <!--                           <td>System Architect</td> -->
+                        <!--                           <td>Edinburgh</td> -->
+                        <!--                           <td>Edinburgh</td> -->
+                        <!--                           <td> -->
+                        <!--                             <img -->
+                        <!--                               src="" -->
+                        <!--                               alt="" -->
+                        <!--                               style="width: 200px; height: 90px" -->
+                        <!--                             /> -->
+                        <!--                           </td> -->
+                        <!--                           <td> -->
+                        <!--                             <form method="post" action=""> -->
+                        <!--                               修改 -->
+                        <!--                               <input -->
+                        <!--                                 class="btn btn-success" -->
+                        <!--                                 type="submit" -->
+                        <!--                                 value="修改" -->
+                        <!--                                 style="margin-right: 20px" -->
+                        <!--                               /> -->
+                        <!--                               <input type="hidden" name="id" value="" /> -->
+                        <!--                               <input type="hidden" name="action" value="" /> -->
 
-                              <!-- 刪除 -->
-                              <input
-                                class="btn btn-secondary"
-                                type="submit"
-                                value="刪除"
-                              />
-                              <input type="hidden" name="id" value="" />
-                              <input
-                                type="hidden"
-                                name="action"
-                                value="delete"
-                              />
-                            </form>
-                          </td>
-                        </tr>
+                        <!--                               刪除 -->
+                        <!--                               <input -->
+                        <!--                                 class="btn btn-secondary" -->
+                        <!--                                 type="submit" -->
+                        <!--                                 value="刪除" -->
+                        <!--                               /> -->
+                        <!--                               <input type="hidden" name="id" value="" /> -->
+                        <!--                               <input -->
+                        <!--                                 type="hidden" -->
+                        <!--                                 name="action" -->
+                        <!--                                 value="delete" -->
+                        <!--                               /> -->
+                        <!--                             </form> -->
+                        <!--                           </td> -->
+                        <!--                         </tr> -->
                       </tbody>
                     </table>
                   </div>
@@ -157,6 +187,22 @@
     <!-- custom js for this page -->
     <!-- <script src="../../../assets/js/data-table.js"></script> -->
     <script>
+    
+      $("#roomtypes").on("click", ".deleteBtn", function () {
+        console.log("apple", this.name);
+        $.ajax({
+          url: "/roomtype/" + this.name,
+          type: "DELETE",
+        })
+          .done(function () {
+            $("#roomtypes").children().remove();
+            console.log("123");
+          })
+          .done(function () {
+            loadRoomtypes();
+          });
+      });
+
       $(function () {
         "use strict";
 
