更新所有頁面路徑（含首頁）＋新增訂房頁面

--- a/src/main/resources/public/pages/facility.html
+++ b/src/main/resources/public/pages/facility.html
@@ -30,42 +30,36 @@
     </div>
 
     <nav id="mainav" class="fl_right">
-      <!-- ################################################################################################ -->
       <ul class="clear">
         <li><a href="../index.html">首頁</a></li>
-        <li class=""><a class="drop" href="#aboutUs">關於我們</a>
+        <li><a class="drop" >關於我們</a>
           <ul>
             <li><a href="intro.html">簡介</a></li>
             <li><a href="traffic.html">交通資訊</a></li>
             <li><a href="notic.html">注意事項</a></li>
           </ul>
         </li>
-
         <li><a class="drop">最新消息</a>
           <ul>
             <li><a href="news.html">活動情報</a></li>
+            <li><a href="discount.html">住房優惠</a></li>
+          </ul>
         </li>
-        <li><a href="discount.html">住房優惠</a></li>
-      </ul>
-      </li>
-
-      <li><a href="#">瀏覽房型</a></li>
-
-
-      <li class="active"><a>活動設施</a></li>
-      <ul>
-      </ul>
-      <li><a class="drop" href="#">當地探索</a>
-        <ul>
-          <li><a href="#">自然景點</a></li>
-          <li><a href="#">藝術文化</a></li>
-          <li><a href="#">美食購物</a></li>
-        </ul>
-      </li>
-      </li>
-
-      <li><a href="contactUS.html">聯絡我們</a></li>
-
+        <li><a class="drop">瀏覽房型</a>
+          <ul>
+            <li><a href="room.html">房型一覽</a></li>
+            <li><a href="booking.html">立即訂房</a></li>
+          </ul>
+        </li>
+        <li class="active"><a href="facility.html">活動設施</a></li>
+        <li><a class="drop" href="#">當地探索</a>
+          <ul>
+            <li><a href="#">自然景點</a></li>
+            <li><a href="#">藝術文化</a></li>
+            <li><a href="#">美食購物</a></li>
+          </ul>
+        </li>
+        <li><a href="contactUS.html">聯絡我們</a></li>
       </ul>
     </nav>
   </header>
@@ -115,63 +109,7 @@
       <img class="imgl borderedbox inspace-5" src="../images/facility/bar.jpg" alt="">
       <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
       <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more website templates visit our <a href="https://www.os-templates.com/">free website templates</a> section.</p>
-     
-      <!-- ################################################################################################ -->
     </div>
-    <!-- ################################################################################################ -->
-    <!-- ################################################################################################ -->
-    <!-- <div class="sidebar one_quarter"> 
-      <h6>休閒設施</h6>
-      <nav class="sdb_holder">
-        <ul>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a>
-            <ul>
-              <li><a href="#">Navigation - Level 2</a></li>
-              <li><a href="#">Navigation - Level 2</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Navigation - Level 1</a>
-            <ul>
-              <li><a href="#">Navigation - Level 2</a></li>
-              <li><a href="#">Navigation - Level 2</a>
-                <ul>
-                  <li><a href="#">Navigation - Level 3</a></li>
-                  <li><a href="#">Navigation - Level 3</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li><a href="#">Navigation - Level 1</a></li>
-        </ul>
-      </nav>
-      <div class="sdb_holder">
-        <h6>Lorem ipsum dolor</h6>
-        <address>
-        Full Name<br>
-        Address Line 1<br>
-        Address Line 2<br>
-        Town/City<br>
-        Postcode/Zip<br>
-        <br>
-        Tel: xxxx xxxx xxxxxx<br>
-        Email: <a href="#">contact@domain.com</a>
-        </address>
-      </div>
-      <div class="sdb_holder">
-        <article>
-          <h6>Lorem ipsum dolor</h6>
-          <p>Nuncsed sed conseque a at quismodo tris mauristibus sed habiturpiscinia sed.</p>
-          <ul>
-            <li><a href="#">Lorem ipsum dolor sit</a></li>
-            <li>Etiam vel sapien et</li>
-            <li><a href="#">Etiam vel sapien et</a></li>
-          </ul>
-          <p>Nuncsed sed conseque a at quismodo tris mauristibus sed habiturpiscinia sed. Condimentumsantincidunt dui mattis magna intesque purus orci augue lor nibh.</p>
-          <p class="more"><a href="#">Continue Reading &raquo;</a></p>
-        </article>
-      </div>
-    </div> -->
     <!-- ################################################################################################ -->
     <!-- main body -->
     <div class="clear"></div>
