--- a/src/main/resources/public/pages/intro.html
+++ b/src/main/resources/public/pages/intro.html
@@ -26,42 +26,36 @@
     </div>
 
     <nav id="mainav" class="fl_right">
-      <!-- ################################################################################################ -->
       <ul class="clear">
         <li><a href="../index.html">首頁</a></li>
-        <li class="active"><a class="drop" href="#aboutUs">關於我們</a>
+        <li class="active"><a class="drop" >關於我們</a>
           <ul>
             <li><a href="intro.html">簡介</a></li>
             <li><a href="traffic.html">交通資訊</a></li>
             <li><a href="notic.html">注意事項</a></li>
           </ul>
         </li>
-
         <li><a class="drop">最新消息</a>
           <ul>
             <li><a href="news.html">活動情報</a></li>
+            <li><a href="discount.html">住房優惠</a></li>
+          </ul>
         </li>
-        <li><a href="discount.html">住房優惠</a></li>
-      </ul>
-      </li>
-
-      <li><a href="#">瀏覽房型</a></li>
-
-
-      <li><a href="facility.html">活動設施</a></li>
-      <ul>
-      </ul>
-      <li><a class="drop" href="#">當地探索</a>
-        <ul>
-          <li><a href="#">自然景點</a></li>
-          <li><a href="#">藝術文化</a></li>
-          <li><a href="#">美食購物</a></li>
-        </ul>
-      </li>
-      </li>
-
-      <li><a href="contactUS.html">聯絡我們</a></li>
-
+        <li><a class="drop">瀏覽房型</a>
+          <ul>
+            <li><a href="room.html">房型一覽</a></li>
+            <li><a href="booking.html">立即訂房</a></li>
+          </ul>
+        </li>
+        <li><a href="facility.html">活動設施</a></li>
+        <li><a class="drop" href="#">當地探索</a>
+          <ul>
+            <li><a href="#">自然景點</a></li>
+            <li><a href="#">藝術文化</a></li>
+            <li><a href="#">美食購物</a></li>
+          </ul>
+        </li>
+        <li><a href="contactUS.html">聯絡我們</a></li>
       </ul>
     </nav>
   </header>
