新增選樓層

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -26,6 +26,9 @@
       color: #f3bf07;
       text-decoration: none;
     }
+    h6 {
+     font-size: 25px;
+    }
   </style>
 
 </head>
@@ -138,7 +141,7 @@
       <!-- ################################################################################################ -->
       <section id="services">
         <div class="sectiontitle">
-          <h6 class="heading">最新消息</h6>
+          <h6 class="">最新消息</h6>
           <p class="nospace font-xs">LATEST NEWS</p>
         </div>
         <ul id="latest" class="nospace group sd-third">
@@ -193,7 +196,7 @@
         </ul>
         <br><br>
         <div class="sectiontitle">
-          <h6 class="heading">搶手房型</h6>
+          <h6 class="">搶手房型</h6>
           <p class="nospace font-xs">HOT ROOM</p>
         </div>
         <ul class="nospace group grid-3">
@@ -240,6 +243,17 @@
             <option>總統套房</option>
           </select>
           <select style="width:150px;height:40px;">
+            <option>房間樓層</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+          </select>
+          <select style="width:150px;height:40px;">
             <option>入住人數</option>
             <option>2（成人數）</option>
             <option>3（成人數）</option>
@@ -262,7 +276,7 @@
     <section class="hoc container clear">
       <!-- ################################################################################################ -->
       <div class="sectiontitle">
-        <h6 class="heading">關於我們</h6>
+        <h6 class="">關於我們</h6>
         <p class="nospace font-xs">ABOUT US</p>
       </div>
       <article id="points" class="group">
@@ -300,8 +314,8 @@
       <div class="two_third first">
         <li>
           訂房專線 /
-          <a href="tel:+886-4-23265860">2326-5860</a>
-        </li>
+          <a href="tel:+886-4-23265860">2326-5860</a> 
+        </li><br>
         <p> 地址 / 台中市南屯區公益路二段51號18樓</p>
         <li>
           客服信箱 /
