--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -186,6 +186,17 @@
             <option>總統套房</option>
           </select>
           <select style="width:150px;height:40px;">
+            <option>房間樓層</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+          </select>
+          <select style="width:150px;height:40px;">
             <option>入住人數</option>
             <option>2（成人數）</option>
             <option>3（成人數）</option>
