首頁有小錯字

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -262,7 +262,7 @@
 
           <button style="width:120px;height:40px; background-color: #f3bf07;">現在預訂</button>
         </form>
-        <p align="center" style="color: aliceblue;">13歲以上同成人收費</ㄋ>
+        <p align="center" style="color: aliceblue;">13歲以上同成人收費</p>
           </tr><br>
       </div>
 
