忘記密碼信件串接

--- a/src/main/resources/public/pages/login.html
+++ b/src/main/resources/public/pages/login.html
@@ -109,7 +109,7 @@
                           <input id="checkbox1" type="checkbox" />
                           <label for="checkbox1">記住我</label>
                         </div>
-                        <a href="forgot-password.html" class="switcher-text">
+                        <a href="forgot_password.html" class="switcher-text">
                           忘記密碼
                         </a>
                       </div>
